@@ -35,7 +35,7 @@ public class BookingService {
                 .datetime(data.getDatetime())
                 .staffId(data.getStaffId())
                 .staffName(data.getStaffName())
-                .serviceId(data.getServiceIds().isEmpty() ? null : data.getServiceIds().get(0)) // Сохраняем первый ID для обратной совместимости
+                .serviceId(data.getServiceIds().isEmpty() ? null : data.getServiceIds().getFirst()) // Сохраняем первый ID для обратной совместимости
                 .serviceName(String.join(", ", data.getServiceNames())) // Сохраняем все имена услуг
                 .status("PENDING")
                 .recordId(data.getRecordId())
@@ -44,6 +44,7 @@ public class BookingService {
 
         return bookingRepository.save(booking);
     }
+
     // В BookingService
     public Optional<Booking> findByRecordIdAndRecordHash(Long recordId, String recordHash) {
         return bookingRepository.findByRecordIdAndRecordHash(recordId, recordHash);
@@ -51,33 +52,6 @@ public class BookingService {
 
     public List<Booking> findByStatus(String status) {
         return bookingRepository.findByStatus(status);
-    }
-
-
-
-//    public Booking createBookingFromData(Client client, BookingData data) {
-//        // Например, берём только первый serviceId, если их несколько
-//        Long serviceId = data.getServiceIds().isEmpty() ? null : data.getServiceIds().get(0);
-//        String serviceName = data.getServiceNames().isEmpty() ? null : data.getServiceNames().get(0);
-//
-//        Booking booking = Booking.builder()
-//                .client(client)
-//                .slug(data.getSlug())
-//                .datetime(data.getDatetime())
-//                .staffId(data.getStaffId())
-//                .staffName(data.getStaffName())
-//                .serviceId(serviceId)
-//                .serviceName(serviceName)
-//                .status("PENDING")
-//                .recordId(data.getRecordId())
-//                .recordHash(data.getRecordHash())
-//                .build();
-//
-//        return bookingRepository.save(booking);
-//    }
-
-    public Optional<Booking> getActiveBooking(Client client) {
-        return bookingRepository.findFirstByClientAndStatusInOrderByIdDesc(client, List.of("PENDING", "CONFIRMED"));
     }
 
     public void updateBookingStatus(Booking booking, String status) {
